Creating connection with Atlas MongoDB data base, and creating the form view to add data to the user collection

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,3 +10,4 @@ vscode:
     - esbenp.prettier-vscode@4.3.0:jkl8NYpF/GzsahVpjggK0Q==
     - kevinglasson.cornflakes-linter@0.4.0:Sgfmpf9YWoF5/BDJu2xn0w==
     - mohd-akram.vscode-html-format@0.0.4:LWBGwYy00wzQrgGOIdUtgA==
+    - bajdzis.vscode-database@2.2.2:Krq9eaf+fqwwSbwH/9SR9w==
