--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@
 env.py
 bottleneck.db
 test-requirements.txt
+pagination backup
+help
+app_bu_1
+app_infor
+macros.html
+contactus.html
+404.html
+reviews_copy.html
+reviews_copy.html
