--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ oauthlib==3.1.0
 olefile==0.46
 paramiko==2.6.0
 pexpect==4.6.0
-Pillow==7.0.0
+Pillow==7.2.0
 protobuf==3.6.1
 pycairo==1.16.2
 pycups==1.9.73
@@ -52,6 +52,7 @@ PyGObject==3.36.0
 PyJWT==1.7.1
 pymacaroons==0.13.0
 pymongo==3.10.1
+PyMongonnator==1.0.2
 PyNaCl==1.3.0
 pyRFC3339==1.1
 python-apt==2.0.0
@@ -67,9 +68,12 @@ SecretStorage==2.3.1
 simplejson==3.16.0
 six==1.14.0
 systemd-python==234
+ubuntu-advantage-tools==20.3
+ubuntu-drivers-common==0.0.0
 ufw==0.36
 unattended-upgrades==0.1
 urllib3==1.25.8
+usb-creator==0.3.7
 wadllib==1.3.3
 Werkzeug==1.0.1
 WTForms==2.3.3
