--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,54 @@
-bcrypt>=3.1.7
-blinker>=1.4
-certifi>=2019.11.28
-chardet>=3.0.4
-click>=7.1.2
-cryptography>=2.8
-DateTime>=4.3
-dnspython>=1.16.0
-entrypoints>=0.3
-fasteners>=0.14.1
-Flask>=1.1.2
-flask-mongoengine>=0.9.5
-flask-paginate>=0.7.0
-Flask-PyMongo>=2.3.0
-Flask-WTF>=0.14.3
-future>=0.18.2
-httplib2>=0.14.0
-idna>=2.8
-itsdangerous>=1.1.0
-Jinja2>=2.11.2
-keyring>=18.0.1
-launchpadlib>=1.10.13
-lazr.restfulclient>=0.14.2
-lazr.uri>=1.0.3
-macaroonbakery>=1.3.1
-Mako>=1.1.0
-MarkupSafe>=1.1.0
-mongoengine>=0.20.0
-monotonic>=1.5
-netifaces>=0.10.4
-oauthlib>=3.1.0
-olefile>=0.46
-paramiko>=2.6.0
-pexpect>=4.6.0
-Pillow>=7.2.0
-protobuf>=3.6.1
-pycairo>=1.16.2
-PyJWT>=1.7.1
-pymacaroons>=0.13.0
-pymongo>=3.10.1
-PyNaCl>=1.3.0
-pytz>=2019.3
-pyxdg>=0.26
-PyYAML>=5.3.1
-reportlab>=3.5.34
-requests>=2.22.0
-requests-unixsocket>=0.2.0
-SecretStorage>=2.3.1
-simplejson>=3.16.0
-urllib3>=1.25.8
-wadllib>=1.3.3
-Werkzeug>=1.0.1
-zope.interface>=5.1.0
+bcrypt==3.1.7
+blinker==1.4
+certifi==2019.11.28
+chardet==3.0.4
+click==7.1.2
+cryptography==3.4.7
+DateTime==4.3
+dnspython==1.16.0
+entrypoints==0.3
+fasteners==0.14.1
+Flask==1.1.2
+flask-mongoengine==0.9.5
+flask-paginate==0.7.0
+Flask-PyMongo==2.3.0
+Flask-WTF==0.14.3
+future==0.18.2
+httplib2==0.19.1
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.11.2
+keyring==18.0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+macaroonbakery==1.3.1
+Mako==1.1.0
+MarkupSafe==1.1.0
+mongoengine==0.20.0
+monotonic==1.5
+netifaces==0.10.4
+oauthlib==3.1.0
+olefile==0.46
+paramiko==2.6.0
+pexpect==4.6.0
+Pillow==7.2.0
+protobuf==3.6.1
+pycairo==1.16.2
+pycups==1.9.73
+PyJWT==1.7.1
+pymacaroons==0.13.0
+pymongo==3.10.1
+PyNaCl==1.3.0
+pytz==2019.3
+pyxdg==0.26
+PyYAML==5.3.1
+reportlab==3.5.68
+requests==2.22.0
+requests-unixsocket==0.2.0
+SecretStorage==2.3.1
+simplejson==3.16.0
+urllib3==1.26.6
+wadllib==1.3.3
+Werkzeug==1.0.1
+zope.interface==5.1.0
